--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ composer.phar
 /vendor/
 /logs/*
 !/logs/README.md
+/.idea/
 
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
